fix: all text fixed to be visible in light/dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,7 +30,7 @@
 		color: white;
 	}
 	.text--truncate {
-		color: white;
+		color: black;
 	}
 	.navbar__link {
 		color: white;
@@ -38,11 +38,14 @@
 	.toggle_node_modules-\@docusaurus-theme-classic-lib-theme-ColorModeToggle-styles-module {
 		color: white;
 	}
+	.navbar__items .text--truncate{
+		color: white		
+	}
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-	--ifm-color-primary: #044c8b;
+	--ifm-color-primary: #70b4ff;
 	--ifm-color-primary-dark: #0a3f7b;
 	--ifm-color-primary-darker: #06356c;
 	--ifm-color-primary-darkest: #032954;
@@ -52,7 +55,13 @@
 	--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 	/* --ifm-navbar-background-color: red !important;
 	--ifm-footer-background-color: red !important; */
+	.hero--primary {
+		--ifm-hero-background-color: #0f0c29; 
+	}
 	.feature-item-component {
 		filter: invert(1);
+	}
+	.text--truncate {
+		color: white;
 	}
 }
